# tp-ghcli

./: .gitignore  .pylintrc  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
ghcli/: __init__.py  api.py  cli.py  gui.py  io.py  model.py
tests/: test_api.py  test_ghcli.py
