[tool.poetry]
authors = ["m09 <142691+m09@users.noreply.github.com>"]
description = "CLI to list and create GitHub issues."
name = "ghcli"
packages = [{include = "ghcli"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
flake8-bugbear = "^23.7.10"
flake8-docstrings = "^1.7.0"
isort = "^5.12.0"
mypy = "^1.5.1"
pylint = "^2.17.5"
pytest = "^7.4.1"

[tool.isort]
profile = "black"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
