[tool.poetry]
authors = ["m09 <142691+m09@users.noreply.github.com>"]
description = "CLI to list and create GitHub issues."
name = "ghcli"
packages = [{include = "ghcli"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
mypy = "*"
pytest = "*"
ruff = "*"

[tool.ruff]
target-version = "py310"

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
